Added purchase to system
